# springdrift

./: .dockerignore  .gitignore  .springdrift.json  .springdrift.toml  AUTHORS  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  Containerfile.coder  ENGINEERING_LOG.md  LICENSE  README.md  SETUP.md  dprime-config.example.json  dprime.example.json  gleam.toml  index.html  manifest.toml
.github/: pull_request_template.md
.springdrift_example/: HOW_TO.md  README.md  config.toml  dprime.json  planner_features.json
docs/: README.md  engineering-log.md  operators-manual.md
evals/: README.md
sandbox/: Dockerfile
scripts/: audit-fabrication.py  build-coder-image.sh  discover-coder-endpoints.sh  e2e-coder.sh  ensure-ollama.sh  fresh-instance.sh  probe-coder-acp.py  probe-coder-acp.sh  setup-linux.sh  setup-macos.sh  smoke-coder-image.sh  vendor-opencode-spec.sh
src/: agent_identity.gleam  app_log.gleam  classifier.gleam  config.gleam  context.gleam  cycle_log.gleam  embedding.gleam  frontdoor.gleam  gleam@httpc.erl  identity.gleam  paths.gleam  profile.gleam  query_complexity.gleam  sandbox.gleam  skills.gleam  slog.gleam  springdrift.gleam  springdrift_beam_logger.erl  springdrift_ffi.erl  springdrift_test_ffi.erl  storage.gleam  (+3 more)
tools/sd-audit/: pyproject.toml
tools/sd-audit/sd_audit/: app.py  cli.py
tools/sd-audit/sd_audit/analysis/: summary.py  timeline.py
tools/sd-audit/sd_audit/readers/: base.py  cbr.py  comms.py  cycles.py  facts.py  narrative.py  skills.py
tools/sd-audit/sd_audit/templates/: index.html
tools/sd-audit/tests/: test_skills.py
(+669 files in other folders)
